# Rename-Photo-AI

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bandit.yml  scorecard.yml
src/rename_photos_ai/: rename_photos.py
tests/: test_rename_photos.py
